--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "npm index.js",
+    "dev": "nodemon index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
