--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^4.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "python-shell": "^1.0.8",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
